added real images of the brand. pictures and description are now properly displayed with the fading animation

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
               <div class="col-sm-4">
                 <ul>
                     <li class="nav-item">
-                      <a href="#">Nuestros Cursos</a>
+                      <a href="#courses">Nuestros Cursos</a>
                     </li>
                     <li class="nav-item">
                       <a href="#">Contacto</a>
@@ -47,7 +47,7 @@
         </div>
     </header>
 
-    <section class="courses">
+    <section class="courses" id="courses">
       <div class="container-fluid" id="courses">
         <div class="row">
           <div class="col-sm-12">
@@ -55,22 +55,16 @@
           </div>
         </div>
         <div class="row">
-            <div class="col-sm-4" id="courseImages"><img src="../img/bautismo.jpg" alt="foto cursos" class="courseImages"></div>
-            <div class="courseDescription"><p class="hiddenText">Lorem ipsum dolor sit amet consectetur adipisicing elit..</p></div>
-
-            <div class="col-sm-4" id="courseImages"><img src="../img/bautismo.jpg" alt="foto cursos" class="courseImages">
-              <div class="courseDescription"><p class="hiddenText">Lorem ipsum dolor sit amet consectetur adipisicing elit..</p></div>
+            <div class="col-sm-4" id="courseImages"><img src="../img/privado.jpg" alt="foto cursos" class="courseImages">
+              <p class="hiddenText">Curso de Piloto Privado</p>
             </div>
-            <div class="col-sm-4" id="courseImages"><img src="../img/bautismo.jpg" alt="foto cursos" class="courseImages">
-              <div class="courseDescription"><p class="hiddenText">Lorem ipsum dolor sit amet consectetur adipisicing elit..</p></div>
+            <div class="col-sm-4" id="courseImages"><img src="../img/comercial.jpg" alt="foto cursos" class="courseImages">
+              <p class="hiddenText">Curso de Piloto Comercial</p>
+            </div>
+            <div class="col-sm-4" id="courseImages"><img src="../img/instructor.jpg" alt="foto cursos" class="courseImages">
+              <p class="hiddenText">Curso de instructor de Vuelo</p>
             </div>
         </div>  
-          <div class="row">
-            <div class="col-sm-4" id="courseImages"><img src="../img/bautismo.jpg" alt="foto cursos" class="courseImages"></div>
-            <div class="col-sm-4" id="courseImages"><img src="../img/sample1.jpg" alt="foto cursos" class="courseImages"></div>
-            <div class="col-sm-4" id="courseImages"><img src="../img/sample1.jpg" alt="foto cursos" class="courseImages"></div>
-          </div>
-        
       </div>
     </div>
     </section>
@@ -79,7 +73,7 @@
     <script src="../js/scroll-out.js"></script>
     <script type="text/javascript">
         ScrollOut({
-          targets: 'img, section'
+          targets: 'img, h2'
     })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
